--- a/src/components/auth/_auth.module.css
+++ b/src/components/auth/_auth.module.css
@@ -73,3 +73,116 @@
   color: #6739b7;
   border: 1px solid #6739b7;
 }
+
+#authLoginBlock article {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+}
+
+#authLoginBlock h1 {
+  font-size: 25px;
+  text-transform: uppercase;
+  color: #6739b7;
+  font-weight: bold;
+  padding: 15px 0;
+  text-align: center;
+}
+
+#authLoginBlock form {
+  background: #fff;
+  padding: 20px;
+  width: 400px;
+  box-shadow: 0px 1px 2px 0px #ccc;
+}
+
+#authLoginBlock form label {
+  width: 100%;
+  padding: 5px 0;
+  font-weight: 400;
+  color: #6739b7;
+  display: inline-block;
+}
+
+#authLoginBlock form input {
+  width: 100%;
+  background: transparent;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 5px 0;
+  border-radius: 4px;
+}
+
+#authLoginBlock form button {
+  background-color: #6739b7;
+  color: #fff;
+  border: 1px solid #6739b7;
+  padding: 10px 30px;
+  width: 100%;
+  display: block;
+  margin: 15px 0 10px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+#authLoginBlock form button:hover {
+  background-color: #9c27b0;
+  color: #fff;
+  border: 1px solid #6739b7;
+}
+
+#authLoginBlock form div {
+  position: relative;
+}
+
+#authLoginBlock form .eyeIcon {
+  position: absolute;
+  right: 0px;
+  top: 34px;
+  background: #eeeeeeb3;
+  padding: 8px 13px;
+  border-radius: 0px 4px 4px 0px;
+  border-left: 2px solid #eee;
+  cursor: pointer;
+}
+
+#authLoginBlock form .eyeIcon svg {
+  font-size: 20px;
+}
+
+#authLoginBlock form .eyeIcon:hover {
+  background-color: #6739b7;
+  color: #fff;
+}
+
+#authLoginBlock form aside {
+  padding: 20px 0;
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+}
+
+#authLoginBlock form aside span a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  background: #9e9e9e;
+  padding: 5px 20px;
+  border-radius: 4px;
+}
+#authLoginBlock form p {
+  border-bottom: 2px solid #eee;
+  border-top: 2px solid #eee;
+}
+
+#authLoginBlock form p a {
+  color: green;
+  text-decoration: none;
+  font-weight: bold;
+  display: inline-block;
+  padding: 10px 0;
+}
