--- a/src/components/profile/_profile.module.css
+++ b/src/components/profile/_profile.module.css
@@ -16,7 +16,7 @@
   background: #fff;
 }
 
-.mainProfileBlock aside {
+.mainProfileBlock > aside {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -149,7 +149,8 @@
   border-radius: 5px;
 }
 
-.profilePhotoBlock form button {
+.profilePhotoBlock form button,
+.profileForm button {
   background-color: #6739b7;
   color: #fff;
   border: 1px solid #6739b7;
@@ -164,7 +165,8 @@
   cursor: pointer;
 }
 
-.profilePhotoBlock form button:hover {
+.profilePhotoBlock form button:hover,
+.profileForm button:hover {
   background-color: #9c27b0;
   color: #fff;
   border: 1px solid #6739b7;
@@ -184,4 +186,65 @@
   display: block;
   border-radius: 3px;
   border: 1px solid #8bc34a;
+}
+
+.profileForm {
+  padding: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.profileForm div {
+  flex-basis: 24%;
+  padding: 10px;
+  background-color: #fff;
+}
+#textArea {
+  flex-basis: 100%;
+}
+
+.profileForm div label {
+  width: 100%;
+  display: block;
+  padding: 5px 0;
+  color: #111;
+  font-size: 16px;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+
+.profileForm div input[type="text"],
+.profileForm div textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.profileForm div span {
+  padding: 5px 10px;
+  color: #111;
+  margin: 2px 4px;
+  display: inline-flex;
+  background: #eee;
+  border-radius: 5px;
+}
+
+.profileForm div input[type="radio"] {
+  margin: 0 4px;
+}
+
+.profileUser {
+  text-align: center;
+  padding: 10px 40px;
+  background: #efefef57;
+  color: #3f51b5;
+  font-size: 17px;
+  text-transform: capitalize;
+  font-weight: 300;
+  margin: 10px 0;
+}
+.profileUser p {
+  padding: 10px 0;
 }
