--- a/src/global.css
+++ b/src/global.css
@@ -43,3 +43,68 @@ body {
     transform: rotate(360deg);
   }
 }
+
+.slider-wrapper {
+  height: 600px !important;
+}
+.slider-wrapper img {
+  height: 600px !important;
+  object-fit: cover !important;
+}
+.slide .legend {
+  transition: all 0.5s ease-in-out;
+  position: absolute;
+  top: 0;
+  left: 0% !important;
+  margin-left: 0 !important;
+  width: 50% !important;
+  border-radius: 0 !important;
+  background: #000;
+  color: #fff;
+  padding: 10px;
+  font-size: 12px;
+  text-align: center;
+  opacity: 0.25;
+  transition: opacity 0.35s ease-in-out;
+  height: 600px !important;
+  bottom: 0 !important;
+}
+
+.legend h1 {
+  font-size: 2em;
+  padding: 20px;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.legend p {
+  font-size: 1.2em;
+  padding: 10px;
+  color: #fff;
+  text-transform: lowercase;
+  line-height: 20px;
+}
+
+.legend button {
+  background-color: #fff;
+  color: #111;
+  padding: 10px 30px;
+  text-align: center;
+  border-radius: 5px;
+  border: 1px solid #888;
+  margin: 20px;
+  cursor: pointer;
+}
+.legend button:hover {
+  background-color: #000;
+  color: #fff;
+  border: 1px solid #111;
+}
+
+.carousel .slide .legend {
+  background-color: rgba(0, 0, 0, 0.508);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
