--- a/src/components/hotelsandCity/_hotel.module.css
+++ b/src/components/hotelsandCity/_hotel.module.css
@@ -63,3 +63,113 @@ input:focus {
   position: absolute;
   padding: 15px 6px;
 }
+
+.addressBlock {
+  flex-basis: 100% !important;
+}
+
+#hotelBlock form label {
+  display: block;
+  padding: 10px 0;
+  font-weight: 400;
+  text-transform: capitalize;
+}
+#hotelBlock form input[type="text"],
+.type select,
+#hotelBlock form input[type="file"] {
+  width: 100%;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 4px;
+}
+
+.fileType {
+  flex-basis: 50% !important;
+  margin: -5px 0px;
+}
+.fileType input {
+  background-color: #fff;
+}
+.checkboxContainer {
+  flex-basis: 100% !important;
+}
+
+.checkBoxBlock {
+  background: #fff;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  border-bottom: 1px solid #607d8b73;
+}
+.checkBoxBlock span {
+  display: flex;
+  gap: 10px;
+}
+.availableType aside {
+  justify-content: flex-start;
+  display: flex;
+  gap: 10px;
+}
+
+.availableType aside span {
+  flex: 1 1;
+  background: #fff;
+  padding: 9px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.availableType aside span input {
+  margin: 0 5px;
+}
+
+.addressBlock textarea {
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 4px;
+  width: 100%;
+}
+
+#hotelBlock button {
+  padding: 7px 10px;
+  background: #00d0a1;
+  margin: 10px 0;
+  display: block;
+  border-radius: 5px;
+  text-decoration: none;
+  color: #fff;
+  font-size: 14px;
+  cursor: pointer;
+  border: 1px solid #00d0a1;
+  font-size: 16px;
+  text-transform: capitalize;
+}
+#hotelBlock button:hover {
+  background-color: #673ab7;
+  border: 1px solid #673ab7;
+}
+
+#hotelBlock form figure {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  top: 0;
+}
+#hotelBlock form figure img {
+  width: 200px;
+  height: 200px;
+  border-radius: 10px;
+}
+
+.progressBar div {
+  background: #fff;
+  padding: 10px;
+}
+
+.progressBar div p span {
+  background: #00d0a1;
+  padding: 5px 15px;
+  color: #fff;
+  border-radius: 2px;
+}
